[Fix] Quit  border solid (amenties)

--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -29,6 +29,10 @@ button:hover {
 .amenities {
     height: 100%;
     width: 25%;
+    border-right: 1px #DDDDDD;
+}
+
+.locations {
     border-right: 1px solid #DDDDDD;
 }
 
