--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -1,13 +1,19 @@
-body {
+* {
     margin: 0px;
     padding: 0px;
+}
+
+body {
     color: #484848;
     font-size: 14px;
     font-family: Circular, "Helvetica Neue", Helvetica, Arial, sans-serif;
+    position: relative;
+    height: 100%;
 }
 
 .container {
     max-width: 1000px;
     margin: 30px auto;
-    padding: 20px;
+    height: 250%;
+    margin-bottom: 30px;
 }
