--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -1,13 +1,14 @@
 .filters {
     color: white;
     height: 70px;
-    width: 100%;
+    width: inherit;
     border: 1px solid #DDDDDD;
     border-radius: 4px;
     margin: 0 auto;
     display: flex;
     align-items: center;
     justify-content: flex-end;
+    padding-right: 30px;
 }
 
 button {
@@ -19,6 +20,7 @@ button {
     border: none;
     border-radius: 4px;
     margin-right: 30px;
+    float: right;
 }
 
 button:hover {
