--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -25,7 +25,7 @@ button:hover {
     opacity: 90%;
 }
 
-.locations {
+.filters .locations {
     height: 100%;
     width: 25%;
     border-right: 1px solid #DDDDDD;
@@ -35,7 +35,7 @@ button:hover {
     display: block;
 }
 
-.amenities {
+.filters .amenities {
     height: 100%;
     width: 25%;
     border-right: 1px #DDDDDD;
@@ -45,7 +45,7 @@ button:hover {
     display: block;
 }
 
-h3 {
+.filters h3 {
     font-weight: 600;
     margin: 10px 40px 5px;
     color: #484848
