--- a/web_static/styles/100-places.css
+++ b/web_static/styles/100-places.css
@@ -142,11 +142,12 @@
     display: flex;
     width: 50px;
     height: 50px;
+    background-size: 25px;
 }
 
 .places .amenities li p {
-    margin-left: 50px;
-    margin-top: 20px;
+    margin-left: 40px;
+    margin-top: 5px;
 }
 
 .places .amenities .wi-fi {
@@ -155,6 +156,7 @@
     display: flex;
     width: 50px;
     height: 50px;
+    background-size: 25px;
 }
 
 .places .amenities .pets_friendly {
@@ -163,6 +165,7 @@
     display: flex;
     width: 50px;
     height: 50px;
+    background-size: 25px;
 }
 
 .places .reviews h2 {
